<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fogaiht.rovernasa.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/rv2"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextD"
        android:layout_centerHorizontal="true"
        android:text="@string/pos_ini" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:text="@string/action" />

    <EditText
        android:id="@+id/editTextD"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="72dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editTextY"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextX"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:text="@string/pos_y" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextY"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:text="@string/direc" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextX"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView"
        android:text="@string/pos_x"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="29dp"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:text="@string/next" />

    <TextView
        android:id="@+id/info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn2"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_toStartOf="@+id/editText2"
        android:text="" />
</RelativeLayout>
