<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fogaiht.rovernasa.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rv1"
        android:textSize="30sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/pos_ini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextD"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:ems="10"
        android:id="@+id/editTextD"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"

        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextY"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Space
        android:layout_width="25dp"
        android:layout_height="90dp"
        android:layout_alignBottom="@+id/editTextX"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"

        android:id="@+id/editTextX"
        android:layout_above="@+id/textView2"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:layout_marginTop="92dp"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/pos_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView5" />

    <TextView
        android:text="@string/direc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_above="@+id/editTextY"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:text="@string/pos_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/textView4"
        android:layout_above="@+id/editTextX"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_marginBottom="29dp"
        android:id="@+id/button3" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button3"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_toStartOf="@+id/editText2"
        android:id="@+id/testetxt" />
</RelativeLayout>
