<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fogaiht.rovernasa.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid"
        android:textSize="20sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/pos_ini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextGridY"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:ems="10"
        android:id="@+id/editTextGridY"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <Space
        android:layout_width="25dp"
        android:layout_height="90dp"
        android:layout_alignBottom="@+id/editTextGridX"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextGridX"
        android:layout_above="@+id/textView2"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />



    <TextView
        android:text="@string/pos_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_above="@+id/editTextGridX"
        android:layout_alignRight="@+id/editTextGridY"
        android:layout_alignEnd="@+id/editTextGridY"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp" />

    <TextView
        android:text="@string/pos_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/textView4"
        android:layout_above="@+id/editTextGridX"
        android:layout_alignLeft="@+id/editTextGridX"
        android:layout_alignStart="@+id/editTextGridX"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn1"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="108dp" />
</RelativeLayout>
